--- a/public/css/startPage.css
+++ b/public/css/startPage.css
@@ -6,7 +6,7 @@
     --thistle: #D7BCE8;
     --thistle-light: #E8CEE4;
     --pale-purple: #FDE2FF;
-
+    --pink: #EDA4BD
 }
 
 .layout {
@@ -59,4 +59,34 @@
     color: var(--wenge);
     background-color: var(--pale-purple);
 }
+
+.body .abstract-blogs-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    margin-top: 3rem;
+    column-gap: 4rem;
+}
+
+.body .abstract-blogs-container .abstract-blog {
+    display: flex;
+    flex-direction: column;
+    border-width: 0px 0px 4px 0px;
+    border-style: solid;
+
+    border-color: var(--wenge);
+}
+
+
+.body .abstract-blogs-container .abstract-blog h2 {
+
+}
+
+.body .abstract-blogs-container .abstract-blog img {
+    width: 100%;
+    height: 70%;
+    border-radius: 10px 10px 0 0;
+}
+
 
