--- a/public/css/startPage.css
+++ b/public/css/startPage.css
@@ -21,7 +21,7 @@
 .sidebar {
     grid-area: sidebar;
     background-color: var(--wenge);
-    height: 100vh;
+    height: 100%;
     padding-top: 2rem;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.75);
 
