--- a/public/css/startPage.css
+++ b/public/css/startPage.css
@@ -27,7 +27,6 @@
 
 }
 
-
 .sidebar h1 {
     color: white;
     margin-bottom: 5rem;
@@ -67,6 +66,7 @@
     margin-right: 4rem;
     margin-top: 3rem;
     column-gap: 4rem;
+    row-gap: 3rem;
 }
 
 .body .abstract-blogs-container .abstract-blog {
