--- a/public/css/post.blog.page.css
+++ b/public/css/post.blog.page.css
@@ -11,26 +11,23 @@
 
 .post-blog {
     display: flex;
-    /*justify-content: center;*/
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    /*row-gap: 40px;*/
-    /*column-gap: 50px;*/
-    margin-bottom: 10rem;
     width: 100%;
     height: 100%;
 }
 
 
-label {
-    font-size: 1.2rem;
-    margin-right: 1rem;
-}
+/*label {*/
+/*    font-size: 1.2rem;*/
+/*    margin-right: 1rem;*/
+/*}*/
 
 input {
     font-size: 3rem;
-    /*height: 3rem;*/
-    /*width: 34rem;*/
+    height: 3rem;
+    width: 34rem;
     border-style: solid;
     border-width: 4px;
     border-color: #1a202c;
@@ -45,29 +42,20 @@ input:focus {
 
 textarea {
     font-size: 2rem;
-    min-height: 60%;
-    min-width: 60%;
+    padding-right: 18rem;
     border-style: solid;
     border-width: 3px;
     border-color: #1a202c;
     border-radius: 10px;
 }
 
+.blog-body-container {
+    /*height: 4rem;*/
+    /*width: 14rem;*/
+}
+
 textarea:focus {
     border-color: rgba(97, 34, 189, 0.39);
-}
-
-.blog-body-container {
-    /*margin-top: 3rem;*/
-    /*margin-bottom: 2rem;*/
-}
-
-.submitPost {
-
-}
-
-.post-blog {
-
 }
 
 .post-blog-form {
@@ -76,5 +64,14 @@ textarea:focus {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(rgba(235, 63, 255, 0.5), rgba(0, 0, 0, 0.97)), url("https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?size=626&ext=jpg&ga=GA1.1.87170709.1707609600&semt=sph") !important;
+    background-color: #cccccc;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.blog-title {
+
 }
 
